k8s/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-deploy
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: kkmee0209/team2_django:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            cpu: 500m          
        ports:
        - containerPort: 8000
