k8s/django-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  namespace: dev
spec:
  selector:
    app: was
  ports:
  - port: 8000
    targetPort: 8000
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-svc
subsets:
  - addresses:
      - ip: # 온프레미스 DB ip주소
    ports:
      - port: 3306
